# decider

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  decider.json  fluence-lock.yaml  fluence.yaml  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.fluence/: env.yaml  workers.yaml
.fluence/aqua/: deals.aqua  hosts.aqua  services.aqua  workers.aqua
.fluence/aqua-dependencies/: package-lock.json  package.json
.fluence/schemas/: env.json  fluence.json  module.json  service.json  spell.json  workers.json
.fluence/tmp/: Config.toml  Config.toml.bak
.github/: docker-compose.yml  renovate.json
.github/ipfs/: docker-compose.yml
.github/release-please/: config.json
.github/workflows/: ci.yml  e2e.yml  release.yml  snapshot.yml  tests.yml
builtin-package/: blueprint.json  curl_adapter_config.json  fluence_aurora_connector_config.json  on_start.air  package.sh
example/: Config.toml  decider_init_args.json  oneshot.json  periodic.json  worker_config.json
scripts/: compile.sh  docker-compose.yml  remove_all_spells.sh  spell.sh  spells.aqua
src/aqua/: compile.sh  consts.aqua  debug.aqua  decider.aqua  fluence_aurora_connector.aqua  hex.aqua  info.aqua  install.aqua  main.aqua  remove_worker.aqua  spell.yaml  spell.yml  strings.aqua  types.aqua  worker.aqua
src/aqua/chain/: aurora.aqua  blocks.aqua  chain.aqua  changed_deals.aqua  connector.aqua  deal_peer_removed.aqua  deal_status.aqua  from_block.aqua  last_seen.aqua  new_deals.aqua  register_worker.aqua
src/aqua/deal/: install.aqua  remove.aqua  status.aqua  update.aqua
src/aqua/decider/: changed_deals.aqua  consts.aqua  deal_removed.aqua  deal_spell.aqua  deal_status.aqua  deal_storage.aqua  decider.aqua  install.aqua  join_deal.aqua  mailbox.aqua  main.aqua  new_deals.aqua  poll.aqua  register_worker.aqua  sync_info.aqua
src/aqua/example/: decider_init_args.json
src/aqua/fluence/: connector.aqua  peer.aqua  spell.aqua  worker.aqua
src/aqua/storage/: deal.aqua  failed.aqua  tx.aqua
src/aqua/worker/: register.aqua  tx_status.aqua  worker.aqua  worker_app_cid.aqua  worker_spell.aqua
src/compiled-aqua/: deal_spell.main.air  poll.main.air  poll.ts
src/distro/: Cargo.toml  built.rs
src/distro/decider-spell/: chain_connector.wasm  curl_adapter.wasm  decider.decide.air  decider.eq.air  decider.get_counter.air  decider.get_latest_block.air  decider.get_string.air  decider.get_worker_settings.air  decider.is_to_block_outdated.air  decider.is_worker_created.air  decider.join_deal.air  decider.main.air  decider.need_update_from_block.air  decider.poll_deal_changes_batch.air  decider.poll_new_deals.air  decider.process_deal.air  decider.spell_log.air  decider.store_deal_state.air  decider.store_joined_deal.air  fluence_aurora_connector.wasm  main.b  worker.main.air
src/distro/decider-spell/deal_spell/: deal_spell.main.air
src/distro/decider-spell/poll/: poll.main.air
src/distro/src/: lib.rs
src/distro/tests/: test.rs
src/services/aurora-connector/: service.yaml
src/services/chain-connector/: service.yaml
src/services/chain-connector/modules/chain_connector/: Cargo.toml  module.yaml
src/services/chain-connector/modules/chain_connector/src/: config.rs  curl.rs  hex.rs  latest_block.rs  peer_id.rs
src/services/chain-connector/modules/chain_connector/src/chain/: chain_data.rs  chain_info.rs  deal_changed.rs  deal_created.rs  deal_matched.rs  log.rs  mod.rs  u256.rs
src/services/chain-connector/modules/chain_connector/src/chain/event/: deal_changed.rs  deal_created.rs  deal_matched.rs  deal_peer_removed.rs  mod.rs
src/services/chain-connector/modules/chain_connector/src/jsonrpc/: block_number.rs  deal_changed.rs  deal_changed_batch.rs  deal_created.rs  deal_matched.rs  deal_peer_removed_batched.rs  deal_status.rs  get_logs.rs  mod.rs  register_worker.rs  request.rs  resolve_subnet.rs  right_boundary.rs  tests.rs  transaction.rs
src/services/fluence-aurora-connector/modules/fluence_aurora_connector/: Cargo.toml  build.rs  module.yaml
src/services/fluence-aurora-connector/modules/fluence_aurora_connector/src/: config.rs  curl.rs  deal.rs  hex.rs  jsonrpc.rs  latest_block.rs  main.rs  matches.rs  peer_id.rs  request.rs
src/services/fluence-aurora-connector/modules/fluence_aurora_connector/src/chain/: chain_data.rs  chain_event.rs  chain_info.rs  data_tokens.rs  deal.rs  deal_changed.rs  deal_created.rs  deal_matched.rs  log.rs  matched.rs  mod.rs  u256.rs
src/services/fluence-aurora-connector/modules/fluence_aurora_connector/src/deal/: changed_cid.rs  created.rs  mod.rs
src/services/fluence-aurora-connector/modules/fluence_aurora_connector/src/jsonrpc/: block_number.rs  deal_changed.rs  deal_changed_batch.rs  deal_created.rs  deal_matched.rs  get_logs.rs  mod.rs  register_worker.rs  request.rs  resolve_subnet.rs  tests.rs
src/services/fluence-aurora-connector/modules/fluence_aurora_connector/src/web3/: curl_transport.rs  mod.rs
src/tests/decider-distro-tests-rs/: Cargo.toml  README.md  rust-toolchain.toml
src/tests/decider-distro-tests-rs/.config/: nextest.toml
src/tests/decider-distro-tests-rs/resources/: upload.sh
src/tests/decider-distro-tests-rs/resources/newService1/: newService1.wasm  newService1_config.json  worker_definition.json
src/tests/decider-distro-tests-rs/resources/url-downloader/: curl_adapter.wasm  curl_adapter_config.json  local_storage.wasm  local_storage_config.json  url_downloader.wasm  url_downloader_config.json  workder_definition.json
src/tests/decider-distro-tests-rs/tests/: test.rs  test_activate.rs  test_deploy.rs  test_failing_chain.rs  test_failing_nox.rs  test_happy_path.rs  test_many_deals.rs  test_remove.rs  test_rpc_server.rs  test_status.rs  test_subnet.rs  test_update.rs  tests_basic.rs
src/tests/decider-distro-tests-rs/tests/utils/: chain.rs  chain_rpc_macro.rs  control.rs  deal.rs  decider.rs  default.rs  distro.rs  mod.rs  setup.rs  spell.rs  subnet.rs  test_apps.rs  test_rpc_server.rs  worker.rs
src/tests/decider-distro-tests-rs/tests/utils/state/: deal.rs  decider.rs  mod.rs  subnet.rs  worker.rs
(+24 files in other folders)
