[package]
name = "decider-distro"
description = "Distribution package for the decider spell including all services, configs and scripts used by it"
license = "Apache-2.0"
version = "0.5.6"
edition = "2021"
build = "built.rs"
include = [ "/src", "built.rs", "Cargo.toml", "decider-spell" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
serde_json = "1.0.96"
fluence-spell-dtos = {version = "0.5.33-feat-update-config-7870711-764-1.0", registry = "fluence"}

[build-dependencies]
built = "0.7.0"
