[package]
name = "decider-distro-tests-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
decider-distro = { path = "../../distro" }

created-swarm = { git = "https://github.com/fluencelabs/nox.git", tag = "nox-v0.16.15" }
connected-client = { git = "https://github.com/fluencelabs/nox.git", tag = "nox-v0.16.15" }
log-utils = { git = "https://github.com/fluencelabs/nox.git", tag = "nox-v0.16.15" }
system-services = { git = "https://github.com/fluencelabs/nox.git", tag = "nox-v0.16.15" }

fluence-app-service = "0.31.1"
fluence-keypair = "0.10.4"
fluence-spell-dtos = "0.6.9"

tempfile = "3.9.0"
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
tracing-subscriber = "0.3.17"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
toml = "0.5.10"
maplit = "1.0.2"
serde_json = "1.0.96"
serde = { version = "1.0.192", features = ["derive"] }
mockito = "1.1.0"
hyper = "0.14.27"
eyre = "0.6.10"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
codegen-units = 256
