[package]
name = "decider-distro-tests-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
decider-distro = { path = "../../distro" }

created-swarm = { git = "https://github.com/fluencelabs/nox.git", branch = "batching" }
connected-client = { git = "https://github.com/fluencelabs/nox.git", branch = "batching" }
log-utils = { git = "https://github.com/fluencelabs/nox.git", branch = "batching" }

tempfile = "3.9.0"
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
tracing-subscriber = "0.3.17"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
toml = "0.5.10"
maplit = "1.0.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.96"
mockito = "1.1.0"
hyper = "0.14.27"
eyre = "0.6.10"
clarity = "1.3.0"
cid = "0.10.1"
hex = "0.4.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
codegen-units = 256
[dependencies]
rand = "0.8.5"
futures = "0.3.30"
