[package]
name = "chain_connector"
version = "0.5.1"
edition = "2018"
publish = false

[[bin]]
name = "chain_connector"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.10.2", features = ["logger"] }
serde_json = "1.0.91"
serde = { version = "1", features = ["derive"] }
log = "0.4.17"
thiserror = "1.0.52"
ethabi = "18.0.0"
hex = "0.4.3"
url = "2.4.0"
cid = "0.10.1"
libp2p-identity = { version = "0.2.1", features = ["peerid"], default-features = false }
clarity = { version = "1.2.3", features = [] }

[dev-dependencies]
marine-rs-sdk-test = "0.12.0"
mockito = "1.1.0"
env_logger = "0.10.0"
