[package]
name = "fluence_aurora_connector"
version = "0.4.16"
edition = "2018"
publish = false

[[bin]]
name = "fluence_aurora_connector"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.7.1"
serde_json = "1.0.91"
serde = { version = "1", features = ["derive"] }
log = "0.4.17"
thiserror = "1.0.38"
ethabi = "18.0.0"
hex = "0.4.3"
url = "2.4.0"

[dev-dependencies]
marine-rs-sdk-test = "0.10.0"
